tests/analyzer/errors/unpure_global.rv
var a = 2.3 + 5.5 - 7.6
var b = a

fn main() {}